fix: Resolve cart component overlapping menu item modal
Adjusted the z-index values for the cart component and menu item modal to ensure proper layering and prevent the cart from overlapping the modal. The menu item modal now has a higher z-index to appear on top of the cart component.

- Updated z-index of menu item modal to 100

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,9 +26,15 @@
   --h5-line-height: 125%;
   --p-font-size: 16px;
   --p-line-height: 150%;
+
   /* padding and spacing */
-  --product-modal-padding: 20px;
   --menu-page-padding: 50px;
+
+  /* modal styling*/
+  --product-modal-padding: 20px;
+  --modal-width: 350px;
+  --modal-items-height: 250px;
+  --modal-addon-text: 14px;
 }
 
 body {
