--- a/styles/CartItem.module.css
+++ b/styles/CartItem.module.css
@@ -1,4 +1,3 @@
-
 .container {
   padding: 30px 0;
 }
@@ -21,17 +20,22 @@
 }
 
 .singleItemHeader span {
-  font-size: 14px;
+  font-size: 16px;
+  line-height: 100%;
   font-weight: 500;
 }
 
 .addOnsList {
-  margin: 15px 0 15px 15%;
-  padding: 0;
+  margin: 8px 0 10px;
 }
 
 .addOnsList li {
-  margin-bottom: 5px;
+  height: calc(5px + var(--modal-addon-text));
+}
+
+.addOnsList span {
+  font-weight: 300;
+  font-size: var(--modal-addon-text);
 }
 
 .editRemoveOptions {
@@ -39,17 +43,13 @@
 }
 
 .editRemoveOptions a {
-  margin-left: 15%;
-  font-size: 14px;
+  margin-left: 10%;
+  font-size: 12px;
   font-weight: 300;
   text-decoration: underline;
 }
 
 @media (max-width: 1000px) {
-  .container {
-    /* flex-basis: 30%; */
-  }
-
   .itemQuantity {
     flex-basis: 10%;
   }
